fix: code snippets under a list item to have correct width instead of overflowing horizontally

--- a/styles/react-notion-x-styles-override.css
+++ b/styles/react-notion-x-styles-override.css
@@ -44,3 +44,10 @@
 .notion-code-copy-button {
   font-size: 1em;
 }
+
+/**
+ * Fixes code snippets inside lists to not overflow horizontally
+ */
+.notion-list {
+  width: 100%;
+}
